# Projeto-Cesta-Basica

./: .gitignore  README.md  auth.go  executar_back.bat  executar_back.sh  executar_front.bat  gcb_banco.db  go.mod  main.go  package-lock.json  package.json  pyproject.toml  wails.json
backend/: .env  db_conection.py  lista_de_erros.txt  server copy.py  server.py  teste.py
backend/static/: index.html
backend/static/assets/: generateReport-C8y7KxUD.js
frontend/: gcb_banco.db  index.html  package-lock.json  package.json  package.json.md5  vite.config.js  vite.config.js.timestamp-1735611689541.mjs  webpack.config.js
frontend/src/: App.css  App.jsx  AuthContext.jsx  RouteGuard.jsx  main.jsx  style.css
frontend/src/Components/AddItemLookupList/: index.jsx
frontend/src/Components/AddItemOnWindow/: AddItemOnWindow.module.css  index.jsx
frontend/src/Components/AddingItem/: AddingItem.module.css  index.jsx
frontend/src/Components/ColorSelector/: index.jsx
frontend/src/Components/ColorSelectorComp/: DivSelectColor.jsx  index copy 2.jsx
frontend/src/Components/Docspage/: Docspage.module.css  index.jsx
frontend/src/Components/EntradaValor/: EntradaValor.module.css
frontend/src/Components/LabelTitles/: LabelTitles.module.css  index.jsx
frontend/src/Components/MessageAlert/: index.jsx  (+1 more)
frontend/src/python/: db_conection.py  gcb_banco.db  gcb_banco.db-journal  server.py
frontend/src/utils/: minurl.mock.js
src/: executar_back.sh  executar_front.bat  package.json
src/backend/: requeriments.txt  setup.py
src/frontend/: index.html  vite.config.js  webpack.config.js
src/frontend/src/: style.css
src/gcb/: compile.bat  compile.sh  executar_back.bat  executar_back.sh  server.spec
src/gcb/backend/: compilar.sh  compile.sh  db_conection.py  server.py  server.spec
src/gcb/frontend/: package-lock.json  package.json
(+412 files in other folders)
