[project]
name = "gcb"
version = "0.1.0"
description = ""
authors = [
    {name = "limin",email = "limin@limin.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.1)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==25.1.0)",
    "bcrypt (==5.0.0)",
    "bottle (==0.13.4)",
    "cffi (==2.0.0)",
    "click (==8.3.1)",
    "ecdsa (==0.19.1)",
    "fastapi (==0.135.1)",
    "h11 (==0.16.0)",
    "idna (==3.11)",
    "passlib (==1.7.4)",
    "pathlib (==1.0.1)",
    "proxy-tools (==0.1.0)",
    "pyasn1 (==0.6.2)",
    "pycparser (==3.0)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "python-dotenv (==1.2.2)",
    "python-jose (==3.5.0)",
    "python-multipart (==0.0.22)",
    "pywebview (==6.1)",
    "six (==1.17.0)",
    "starlette (==0.52.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "uvicorn (==0.41.0)"
]

[tool.poetry]
packages = [{include = "gcb", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
