[tool.poetry]
name = "gcb"
version = "0.1.0"
description = "projeto"
authors = ["limin <limin@limin.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "<0.110"
uvicorn = "^0.42.0"
pywebview = "^6.1"
python-dotenv = "^1.2.2"
python-jose = "^3.5.0"
passlib = "^1.7.4"
bcrypt = "^5.0.0"
python-multipart = "^0.0.22"
bottle = "^0.13.4"
anyio = "<4"
typing-extensions = "^4.15.0"
PySide6 = "^6.10.2"
argon2-cffi = "^25.1.0"
pyinstaller = "^6.19.0"
pythonnet = "^3.0.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
